<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">24HANE</string>
    <string name="splash_text">24HoursAreNotEnough</string>
    <string name="latest_time_format">최근 입실 시간 %s</string>
    <string name="use_guide">사용 가이드</string>
    <string name="page_guide">지원금 지침 안내</string>
    <string name="inquiry_attendance">출입기록 문의사항</string>
    <string name="inquiry_mobile">앱 문의사항</string>
    <string name="logout">로그아웃</string>
    <string name="open_source_license">OpenSourceLicense</string>
    <string name="widget_error">연결된 네트워크가 없어요.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_widget_description">간편하게 42Seoul 출입시간을 확인할 수 있는 위젯입니다.</string>
    <string name="_24hoursarenotenough">24HoursAreNotEnough</string>
    <string name="today_card_title">Today</string>
    <string name="month_card_title">Month</string>
    <string name="battery_optimization_text">배터리 최적화 제외</string>

    <string name="license_retrofit2">Copyright 2013 Square, Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
   \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="target_time">목표 시간</string>
    <string name="accumulate_time">이용 시간</string>
    <string name="overview_curr_status">실시간 현황</string>
    <string name="overview_seocho_title">서초</string>
    <string name="overview_population_default">000명</string>
    <string name="overview_gaepo_title">개포</string>
    <string name="accumulate_time_default">0시간 0분</string>
    <string name="target_time_default">0시간</string>
    <string name="progress_default">0%</string>
    <string name="default_progressbar_time">0H</string>
    <string name="overview_graph_recent">최신순</string>
    <string name="overview_graph_old">오래된순</string>
    <string name="overview_month_accumulate_title">월 누적 시간</string>
    <string name="default_graph_date">2.12(월) - 2.18(일)</string>
    <string name="default_graph_average">평균 6.2시간</string>
    <string name="default_graph_total">총 42시간</string>
    <string name="etc_option_title">더보기</string>
    <string name="card_option">카드 재발급 신청</string>
    <string name="etc_information">지원금 지침 안내</string>
    <string name="etc_complain">출입기록 문의</string>
    <string name="etc_guide">이용 가이드</string>
    <string name="etc_feedback">앱 피드백</string>
    <string name="overview_hour_text">시간&#160;</string>
    <string name="overview_minute_text">분</string>
    <string name="overview_target_time_text">시간</string>
    <string name="overview_percent_text">%</string>
    <string name="reissue_dialog_main_warning_apply_text">카드 재발급을\n신청하시겠습니까?</string>
    <string name="reissue_dialog_main_warning_done_text">저는 카드를 받았음을\n확인했습니다.</string>
    <string name="reissue_dialog_sub_warning_apply_text">신청 후 취소가 불가능합니다.</string>
    <string name="reissue_dialog_sub_warning_done_text">실물 카드를 받은 후 눌러 주세요.</string>
    <string name="reissue_dialog_apply_ok_text">네, 신청하겠습니다</string>
    <string name="reissue_dialog_done_ok_text">네, 확인했습니다</string>
    <string name="overview_graph_total_time">총 %1$.1f시간</string>
    <string name="overview_graph_average_time">평균 %1$.1f시간</string>
    <string name="overview_graph_date">%1$s - %2$s</string>
    <string name="widget_login_error">"로그인 상태가 아닙니다. 로그인 후 다시 시도해주세요."</string>
    <string name="etc_license">라이선스</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="reissue_apply_description">신청 후 업체에 입금해주세요</string>
    <string name="reissue_apply_additional_description">업체에서 입금 확인 후 제작이 진행됩니다.</string>
    <string name="reissue_progress_description">제작은 약 2주간 소요됩니다</string>
    <string name="reissue_progress_additional_description">출입카드 재발급 신청 후 업체에서 입금 확인 후 제작이 진행됩니다.</string>
    <string name="reissue_end_description">카드를 수령해주세요</string>
    <string name="reissue_end_additional_description">재발급 카드는 데스크에서 수령가능합니다.</string>

</resources>