<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/graph_card"
        app:cardCornerRadius="20dp"
        android:padding="20dp"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="#00000000"
            tools:context=".overview.OverViewGraphFragment">


            <TextView
                android:id="@+id/overview_graph_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="최근 주간 그래프"
                android:textSize="14dp"
                android:textColor="@color/default_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overview_graph_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="(6주)"
                app:layout_constraintBottom_toBottomOf="@+id/overview_graph_name"
                app:layout_constraintStart_toEndOf="@+id/overview_graph_name"
                app:layout_constraintTop_toTopOf="@+id/overview_graph_name" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="#00000000"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/overview_graph_name"
                tools:layout_editor_absoluteX="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/overview_graph_info_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="#333333"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_upper"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/overview_graph_date_info"
                            style="@style/graph_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="9dp"
                            android:text="@string/default_graph_date"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/overview_graph_average_time"
                            style="@style/graph_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:text="@string/default_graph_average"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/overview_graph_total_time"
                            app:layout_constraintTop_toBottomOf="@+id/overview_graph_total_time" />

                        <TextView
                            android:id="@+id/overview_graph_total_time"
                            style="@style/graph_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="22dp"
                            android:text="@string/default_graph_total"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_lower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="169dp" />

                <FrameLayout
                    android:id="@+id/graph_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/guideline_lower"
                    app:layout_constraintTop_toBottomOf="@+id/guideline_upper">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/graph_btn_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/overview_graph_btn1"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph_btn2"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageView
                            android:id="@+id/overview_graph_btn2"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph_btn3"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph_btn1" />

                        <ImageView
                            android:id="@+id/overview_graph_btn3"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph_btn4"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph_btn2" />

                        <ImageView
                            android:id="@+id/overview_graph_btn4"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph_btn5"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph_btn3" />

                        <ImageView
                            android:id="@+id/overview_graph_btn5"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph_btn6"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph_btn4" />

                        <ImageView
                            android:id="@+id/overview_graph_btn6"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:tint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph_btn5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/graph_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/overview_graph1"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph2"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageView
                            android:id="@+id/overview_graph2"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph3"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph1" />

                        <ImageView
                            android:id="@+id/overview_graph3"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph4"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph2" />

                        <ImageView
                            android:id="@+id/overview_graph4"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph5"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph3" />

                        <ImageView
                            android:id="@+id/overview_graph5"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/overview_graph6"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph4" />

                        <ImageView
                            android:id="@+id/overview_graph6"
                            android:layout_width="25dp"
                            android:layout_height="87dp"
                            android:src="@drawable/graph"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/overview_graph5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <TextView
                    android:id="@+id/overview_graph_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/overview_graph_recent"
                    android:textColor="@color/graph_text"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline_lower" />

                <TextView
                    android:id="@+id/overview_graph_old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/overview_graph_old"
                    android:textColor="@color/graph_text"
                    android:textSize="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline_lower" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_upper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="105dp" />

                <ImageView
                    android:id="@+id/overview_graph_selector1"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/overview_graph_selector2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />

                <ImageView
                    android:id="@+id/overview_graph_selector2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@id/overview_graph_selector3"
                    app:layout_constraintStart_toEndOf="@id/overview_graph_selector1"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />

                <ImageView
                    android:id="@+id/overview_graph_selector3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@id/overview_graph_selector4"
                    app:layout_constraintStart_toEndOf="@id/overview_graph_selector2"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />

                <ImageView
                    android:id="@+id/overview_graph_selector4"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@id/overview_graph_selector5"
                    app:layout_constraintStart_toEndOf="@id/overview_graph_selector3"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />

                <ImageView
                    android:id="@+id/overview_graph_selector5"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/overview_graph_selector6"
                    app:layout_constraintStart_toEndOf="@id/overview_graph_selector4"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />

                <ImageView
                    android:id="@+id/overview_graph_selector6"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/overview_graph_selector5"
                    app:layout_constraintTop_toBottomOf="@+id/overview_graph_info_card"
                    app:srcCompat="@drawable/ic_reverse_triangle" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>


